Fixed minor game mechanism errors

--- a/comp-scorm/comp-scorm.css
+++ b/comp-scorm/comp-scorm.css
@@ -181,7 +181,7 @@ hr {
 	background-color: #fefefe;
 	margin: 0 auto;
 	padding: 2px;
-	border: 1px solid ##B6D0E2;
+	border: 1px solid #B6D0E2;
 	width:  80%;
 }
 
