--- a/comp-scorm/comp-scorm.css
+++ b/comp-scorm/comp-scorm.css
@@ -75,18 +75,30 @@ hr {
 	display: block;
 	width: fit-content;
 	position: relative;
+	border:  2px solid black;
 	border-radius: 15px;
 	font-size: 16px;
 	margin: auto;
+	/*animation: gameDemo 2.5s linear 2s;
+	animation-direction:  alternate;*/
+}
+
+
+.dropdown option:first-child {
+	color: #d3d3d3 !important;
 }
 
 
 /* [4.2.2] Rule for the bottom drop down cluster  */
-#dd-bottom {
+#dd-main, #dd-bottom {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: space-evenly;
-	align-items: center;	
+	align-items: center;
+}
+
+
+.dropdown-style {
 }
 
 
@@ -178,6 +190,7 @@ hr {
 	text-align: center;
 }
 
+
 /* [6.1] Rule for the modal text <p> element*/
 #modal-text {
 	font-size: 18px;
@@ -191,7 +204,7 @@ hr {
 	color:  #aaa;
 	right: 0;
 	bottom: 0;
-	font-size:  14px;
+	font-size:  18px;
 	font-weight:  bold;
 }
 
@@ -199,4 +212,40 @@ hr {
 	color: black;
 	text-decoration: none;
 	cursor: pointer;
+}
+
+
+/* Overflow Hidden Rule */
+.overflow-hidden {
+	overflow: hidden !important;
+}
+
+
+/* [7] Rule for the blocker */
+#blocker {
+	display: none;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	background-color: rgb(0, 0, 0);
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* [8] Rule for the lines */
+#line-svg {
+	z-index: -1;
+	width:  100%;
+	height:  100%;
+	position:  absolute;
+	top: 0;
+	left: 0;
+}
+
+.tree-lines {
+	stroke-width: 1px;
+	stroke: #000000;
+	position: absolute;
 }
