--- a/comp-scorm/comp-scorm-v2/comp-scorm-v2.css
+++ b/comp-scorm/comp-scorm-v2/comp-scorm-v2.css
@@ -50,7 +50,7 @@ hr {
 	margin: auto;
 	font-size: 18px;
 	width: min-content;
-	min-width:  150px;
+	min-width:  135px;
 	white-space: nowrap;
 }
 
@@ -78,7 +78,6 @@ hr {
     background: #ffffff;
     color: #3b3b3b;	
 }
-
 
 .list-options {
 	position: absolute;
@@ -142,7 +141,6 @@ hr {
 	flex-direction: row;
 	justify-content: space-evenly;
 	align-items: center;
-	flex-basis: 15%;
 }
 
 
@@ -350,4 +348,30 @@ hr {
 	position: absolute;
 }
 
-/****** NED CSS LINE SVG RULES ******/
+#score-table, #score-table th, #score-table tr {
+	border: 2px solid black;
+	border-collapse: collapse;
+	visibility: hidden;
+}
+
+#score-table {
+	/*visibility: hidden;*/
+	width: 75%;
+	margin: 0 auto;
+}
+
+#score-table th {
+	background-color: #203354;
+	color: white;
+}
+
+#score-table tr:hover {
+	background-color: #ddd;
+}
+
+#score-table tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
+
+
+/****** END CSS LINE SVG RULES ******/
